2010-02-03  Brady Eidson  <beidson@apple.com>

        Reviewed by Alexey Proskuryakov.

        REGRESSION (r51644): WebCore/manual-tests/linkjump-1.html fails
        <rdar://problem/7595694> and https://bugs.webkit.org/show_bug.cgi?id=34550

        * fast/loader/document-with-fragment-url-1-expected.txt: Added.
        * fast/loader/document-with-fragment-url-1.html: Added.
        * fast/loader/document-with-fragment-url-2-expected.txt: Added.
        * fast/loader/document-with-fragment-url-2.html: Added.
        * fast/loader/document-with-fragment-url-3-expected.txt: Added.
        * fast/loader/document-with-fragment-url-3.html: Added.
        * fast/loader/document-with-fragment-url-4-expected.txt: Added.
        * fast/loader/document-with-fragment-url-4.html: Added.
        * fast/loader/resources/document-with-fragment-url-test.html: Added.

2010-02-03  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Alexey Proskuryakov.

        WebSocket should close the connection when unloading the document
        https://bugs.webkit.org/show_bug.cgi?id=33248

        * websocket/tests/close-on-unload-expected.txt: Added.
        * websocket/tests/close-on-unload.html: Added.
        * websocket/tests/close-on-unload_wsh.py: Added.
        * websocket/tests/resources/close-on-unload-iframe.html: Added.

2010-02-03  Adele Peterson  <adele@apple.com>

        Reviewed by Simon Fraser.

        Test for: <rdar://problem/7594212> 
        https://bugs.webkit.org/show_bug.cgi?id=34549 - CSS counters crash at http://www.w3.org/TR/css3-content/
        CrashTracer: [USER] 20 crashes in Safari at com.apple.WebCore: WebCore::CounterNode::insertAfter + 319

        * fast/css/counters/counter-before-selector-crash-expected.txt: Added.
        * fast/css/counters/counter-before-selector-crash.html: Added.

2010-02-03  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Ariya Hidayat.
