@@ -1,3 +1,13 @@
+2010-02-03  Fumitoshi Ukai  <ukai@chromium.org>
+
+        Reviewed by Alexey Proskuryakov.
+
+        navigating a frame to new location closes websocket in the frame
+        https://bugs.webkit.org/show_bug.cgi?id=34557
+
+        * websocket/tests/close-on-navigate-new-location-expected.txt: Added.
+        * websocket/tests/close-on-navigate-new-location.html: Added.
+
 2010-02-03  Brady Eidson  <beidson@apple.com>
 
         Reviewed by Alexey Proskuryakov.
